--- a/package.json
+++ b/package.json
@@ -3,9 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@trendmicro/react-sidenav": "^0.4.5",
+    "bootstrap": "^4.3.1",
     "react": "^16.9.0",
+    "react-bootstrap": "^1.0.0-beta.12",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.1.1"
+    "react-player": "^1.12.0",
+    "react-scripts": "3.1.1",
+    "react-search-box": "^2.0.1",
+    "react-table": "^6.10.3"
   },
   "scripts": {
     "start": "react-scripts start",
