--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "react-dom": "^16.9.0",
     "react-player": "^1.12.0",
     "react-scripts": "3.1.1",
-    "react-search-box": "^2.0.1",
-    "react-table": "^6.10.3"
+    "react-search-box": "^2.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
