--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@trendmicro/react-sidenav": "^0.4.5",
+    "antd": "^3.23.2",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "react": "^16.9.0",
